KUBERNETES/gateway-api/certmanager-examples/01-example/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: myapp-gateway-api
  namespace: default
spec:
  gatewayClassName: traefik
  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same  #or All or Selector
    
    - name: https
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: myapp-secret-tls
            namespace: default
      allowedRoutes:
        namespaces:
          from: Same
